# smartdata

./: .gitignore  CMakeLists.txt  smartdata.vcxproj  smartdata.vcxproj.filters
include/: main_traits.h  smartdata.h  transducer.h
include/architecture/: cpu.h  tsc.h
include/architecture/ia32/: ia32_cpu.h  ia32_traits.h  ia32_tsc.h
include/machine/: aes.h  nic.h  udpnic.h
include/network/: ethernet.h  hecops.h  udpnet.h
include/network/tstp/: locator.h  manager.h  router.h  security.h  timekeeper.h  tstp.h
include/system/: meta.h  thread.h  traits.h  types.h
include/utility/: aes.h  array.h  bignum.h  buffer.h  convert.h  debug.h  diffie_hellman.h  geometry.h  handler.h  list.h  math.h  observer.h  ostream.h  poly1305.h  predictor.h  random.h
src/: main.cpp  main_traits.h
src/network/tstp/: locator.cc  router.cc  security.cc  timekeeper.cc  tstp_init.cc
src/utility/: ostream.cc
